# PQMagic-Rust

./: .gitmodules  Cargo.toml  README.md  build.rs
benches/: kem_benches.rs  sig_benches.rs
src/: bindings.rs  error.rs  lib.rs  utils.rs
src/kem/: algorithms.rs  mod.rs  trait.rs
src/sig/: algorithms.rs  mod.rs  trait.rs
tests/: pqmagic_tests.rs
